--- a/host/Abp.BootstrapTheme.Blazor.Host/wwwroot/index.html
+++ b/host/Abp.BootstrapTheme.Blazor.Host/wwwroot/index.html
@@ -9,15 +9,17 @@
 
     <!--ABP:Styles-->
     <link href="_content/Volo.Abp.AspNetCore.Components.WebAssembly.Theming/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <!--<link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
+    <link href="_content/Blazorise/blazorise.css" rel="stylesheet" />
     <link href="_content/Blazorise.Bootstrap/blazorise.bootstrap.css" rel="stylesheet" />
-    <link href="_content/Blazorise.Snackbar/blazorise.snackbar.css" rel="stylesheet" />-->
-    <link href="styles/bootstrap.min.css" rel="stylesheet" />
+    <link href="_content/Blazorise.Snackbar/blazorise.snackbar.css" rel="stylesheet" />
     <link href="_content/Syncfusion.Blazor/styles/bootstrap4.css" rel="stylesheet">
     <link href="_content/BootstrapBlazor/css/bootstrap.blazor.bundle.min.css" rel="stylesheet">
-    <link href="_content/Volo.Abp.AspNetCore.Components.WebAssembly.Theming/libs/flag-icon/css/flag-icon.css" rel="stylesheet" />
-    <link href="main.css" rel="stylesheet" />
+    <link href="_content/Volo.Abp.AspNetCore.Components.WebAssembly.Theming/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="_content/Volo.Abp.AspNetCore.Components.WebAssembly.Theming/libs/fontawesome/css/all.css" rel="stylesheet">
+    <link href="_content/Volo.Abp.AspNetCore.Components.WebAssembly.Theming/libs/flag-icon/css/flag-icon.min.css" rel="stylesheet" />
+
     <link href="_content/Abp.AspNetCore.Components.WebAssembly.BootstrapTheme/styles/site.css" rel="stylesheet" id="bootstrapStyle" />
+    <link href="main.css" rel="stylesheet" />
     <!--/ABP:Styles-->
 </head>
 
